--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -15,8 +15,8 @@ nav img:hover {
   cursor: pointer;
 }
 nav .logo {
-  width: 200px;
-  height: 100%;
+  width: 200px !important;
+  height: 100% !important;
 }
 
 .root {
@@ -46,7 +46,7 @@ input::placeholder {
     margin: 15%;
   }
   .logo {
-    width: 120px;
+    width: 120px !important;
   }
   input {
     width: 50px;
